# Salesforce_Integration

./: .gitignore  README.md  pyproject.toml  requirements.txt  techstack.md  techstack.yml
app/: google2.py  main.py  prod.env  test.json  tester.txt
app/core/: config.py
app/helpers/: process_xml.py
